[package]
name = "exilian"
version = "0.1.0"
edition = "2021"

[dependencies]
argparse = "0.2.2"
async-trait = "0.1.75"
chrono = "0.4.31"
fuzzy-matcher = "0.3.7"
homedir = "0.2.1"
reqwest = { version = "0.11.23", features = ["blocking", "cookies", "default", "json", "socks"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] }


[[bin]]
name = "exilian"
path = "src/exilian.rs"

[[bin]]
name = "exicli"
path = "src/exicli.rs"
